--- a/Exercise.ipynb
+++ b/Exercise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "a640870d-d0f5-4fc7-945b-cbf43e4ed57b",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "ddb0b5a6-f790-45be-a220-f6784694d8d1",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "1fb55d7a-ff46-4541-90e7-88307d19f98e",
    "metadata": {},
    "outputs": [
@@ -238,7 +238,7 @@
        "[29216 rows x 10 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "766663e2-27df-4b33-aaad-ba0f4e8b60c6",
    "metadata": {},
    "outputs": [
@@ -365,7 +365,7 @@
        "6523     long jump            M  Gold  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "29963187-de7d-4a17-91f1-3fe97a51838b",
    "metadata": {},
    "outputs": [
@@ -392,7 +392,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "22960a6b-5984-45a5-aa71-b8103c40d3b4",
    "metadata": {},
    "outputs": [
@@ -745,7 +745,7 @@
        "27741    Men  singles            M  Gold  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "226530e3-c160-400b-8408-4f0ed12fab56",
    "metadata": {},
    "outputs": [
@@ -1090,7 +1090,7 @@
        "23703    Men  doubles            X  Gold  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "77225cd3-781c-4228-8580-d19c74241901",
    "metadata": {},
    "outputs": [
@@ -1338,7 +1338,7 @@
        "[12624 rows x 10 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1350,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "c87406e5-8c57-4f89-ad38-15b5c21c8812",
    "metadata": {},
    "outputs": [
@@ -1372,7 +1372,7 @@
        "Name: count, Length: 124, dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1383,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "04d63f31-7131-4522-871d-aa0f8f7214c5",
    "metadata": {},
    "outputs": [
@@ -1397,7 +1397,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1416,18 +1416,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "id": "df48e65a-45c6-4760-9f39-83ad198a1120",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mgm100m = olympics_df[(olympics_df.Gender == 'Men') & (olympics_df.Medal == 'Gold') & (olympics_df.Event == '100m')]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "f6e7d350-5c83-491d-8d59-75342f97210f",
    "metadata": {},
    "outputs": [
     {
@@ -1864,18 +1854,19 @@
        "13             BURKE, Thomas  USA    Men  100m            M  Gold  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "mgm100m = olympics_df[(olympics_df.Gender == 'Men') & (olympics_df.Medal == 'Gold') & (olympics_df.Event == '100m')]\n",
     "mgm100m.sort_values(['Edition'], ascending=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "id": "a3b18725-b849-4b2d-a5cd-42a2c94e7821",
    "metadata": {},
    "outputs": [
@@ -2123,7 +2114,7 @@
        "13                    Athens     1896          BURKE, Thomas  USA"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
